<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="60dp"
        android:id="@+id/txtWelcome"
        android:text="@string/welcome_to_bitcode"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/txtAndroidBatch"
        android:background="@color/orange"
        android:textColor="@color/black"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/android_feb_2026_batch"
        android:id="@+id/txtAndroidBatch"
        app:layout_constraintTop_toBottomOf="@id/txtWelcome"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/edtUsername"
        android:background="@color/light_yellow"
        android:textColor="@color/black"
        android:textAlignment="center"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtUsername"
        android:hint="@string/enter_the_username"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toBottomOf="@id/txtAndroidBatch"
        app:layout_constraintLeft_toLeftOf="parent"
        android:inputType="text"
        android:autofillHints="name"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/edtPassword"
        android:background="@color/light_yellow"
        android:textColor="@color/black"
        android:textAlignment="center"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtUsername"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:hint="@string/enter_the_password"
        android:id="@+id/edtPassword"
        android:inputType="textPassword"
        android:autofillHints="password"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnSubmit"
        android:background="@color/cyan"
        android:textColor="@color/black"
        android:textAlignment="center"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtPassword"
        android:id="@+id/btnSubmit"
        android:text="@string/submit"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/cyan"
        android:textColor="@color/black"
        />

</androidx.constraintlayout.widget.ConstraintLayout>